# cursorWrapped

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt  scrape_dashboard.py
cursor_wrapped/: __init__.py  main.py
