[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cursor-wrapped"
version = "1.0.8"
description = "Your Cursor IDE year in review - see your AI coding stats for 2025"
readme = "README.md"
license = "MIT"
authors = [
    { name = "riyapatel", email = "riya.patel@uwaterloo.ca" }
]
keywords = ["cursor", "wrapped", "ai", "coding", "stats", "analytics", "year-in-review"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "selenium>=4.0.0",
    "requests>=2.25.0",
    "Pillow>=9.0.0",
]

[project.scripts]
cursor-wrapped = "cursor_wrapped.main:main"

[project.urls]
Homepage = "https://github.com/riyapatel25/cursorWrapped"
Repository = "https://github.com/riyapatel25/cursorWrapped"

[tool.hatch.build.targets.wheel]
packages = ["cursor_wrapped"]

